# rules_android

./: .bazelrc  .bazelversion  .gitignore  AUTHORS  BUILD  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  ROADMAP.md  WORKSPACE  WORKSPACE.bzlmod  android_ide_common_30_1_3_maven_install.json  android_sdk_supplemental_repository.bzl  defs.bzl  defs_dev.bzl  go.mod  go.sum  groups  prereqs.bzl  project.config  robolectric-bazel.patch  rules_android_maven_install.json  rules_jvm_external~~maven~android_ide_common_30_1_3_install.json
.bazelci/: postsubmit.yml  presubmit.yml
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: release.yml  release_prep.sh  stardoc.yml
android/: BUILD  aar_import.bzl  android_binary.bzl  android_device.bzl  android_device_script_fixture.bzl  android_host_service_fixture.bzl  android_instrumentation_test.bzl  android_instrumentation_test_addons.bzl  android_instrumentation_test_stub_script.sh  android_library.bzl  android_sdk.bzl  android_tools_defaults_jar.bzl  apk_import.bzl  attrs.bzl  binary.bzl  device.bzl  instrumentation_test.bzl  library.bzl  local_test.bzl  migration_tag_DONOTUSE.bzl  ndk_repository.bzl  providers.bzl  rules.bzl  sdk_repository.bzl  utils.bzl
bzlmod_extensions/: BUILD  android_extensions.bzl  apksig.BUILD  apksig.bzl  com_android_dex.BUILD  com_android_dex.bzl
ci/: BUILD  generate_bazelci_yaml.py
contrib/: README.md  rules.bzl
contrib/androidsdk_repository_alias/: BUILD.bazel.template  androidsdk_repository_alias.bzl  rule.bzl.template
contrib/remote_android_sdk_repository/: helper.bzl  remote_android_sdk_repository.bzl  repositories.bzl  template.bzl
examples/basicapp/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
examples/basicapp/java/com/basicapp/: AndroidManifest.xml  BUILD  BasicActivity.java  BasicDep.java  bundle_config.pb.json
examples/basicapp/java/com/basicapp/res/values-b+es/: strings.xml
examples/basicappbzlmod/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE.bzlmod
examples/basicappbzlmod/java/com/basicapp/: AndroidManifest.xml
examples/bundle/: .bazelrc  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
examples/bundle/app/: AndroidManifest.xml  BUILD  BasicActivity.java  BundleApplication.java  proguard-rules.pro  proguard.cfg
examples/bundle/app/res/layout/: basic_activity.xml
examples/bundle/app/res/menu/: menu.xml
examples/bundle/app/res/values/: strings.xml
examples/bundle/features/assets/: BUILD  proguard-rules.pro
examples/bundle/features/assets/src/: AndroidManifest.xml  FeatureActivity.java  assets.txt
examples/bundle/features/dex/: BUILD
examples/bundle/features/dex/src/main/: JavaSampleActivity.java  Unused.java
examples/bundle/features/native/: BUILD
examples/bundle/features/native/src/: AndroidManifest.xml
examples/bundle/features/resources/: BUILD
examples/bundle/features/resources/src/: AndroidManifest.xml
examples/bundle/features/resources/src/res/layout/: activity_feature_java.xml
examples/bundle/features/resources/src/res/values/: strings.xml
examples/databinding/: .bazelrc  MODULE.bazel  README.md  WORKSPACE
examples/databinding/java/com/basicapp/: BUILD  BasicActivity.java
examples/databinding/java/com/basicapp/res/layout/: basic_activity.xml
examples/databinding/java/com/databindingapp/: AndroidManifest.xml  BUILD  DataBindingMainActivity.java
examples/databinding/java/com/databindingapp/res/layout/: activity_data_binding.xml
examples/databinding/java/com/databindingapp/res/values/: strings.xml
examples/external_jvm/: .bazelrc  .bazelversion  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  manifest_install.json
examples/external_jvm/java/com/basicapp/: AndroidManifest.xml  BUILD  BasicActivity.java
examples/fat_aar/: AndroidManifest.xml  BUILD  Lib1.java  Lib2.java  README.md
kokoro/presubmit/: download_bazel.sh  kokoro_presubmit.sh  presubmit.cfg  presubmit_main.sh
mobile_install/: BUILD  adapters.bzl  adapters_base.bzl  apks.bzl  constants.bzl  debug.bzl  dependency_map.bzl  deploy_info.bzl  launcher.bzl  launcher_direct.bzl  mi.bzl  native_libs.bzl  process.bzl  providers.bzl  r_java.bzl  resources.bzl  tools.bzl  tools_common.bzl  transform.bzl  utils.bzl
mobile_install/adapters/: BUILD  aar_import.bzl  android_binary.bzl  android_instrumentation_test.bzl  android_library.bzl  android_sdk.bzl  apk_import.bzl  base.bzl  default.bzl  desugar.bzl  java_import.bzl  java_library.bzl  java_lite_grpc_library.bzl  java_lite_proto_library.bzl  java_rpc_toolchain.bzl  jvm_import.bzl  proto_lang_toolchain.bzl  proto_library.bzl
providers/: BUILD  providers.bzl  reexport_providers.bzl
py_support/: BUILD  README.md  requirements.in  requirements_lock.txt  vendored_py_requirements.bzl
rules/: BUILD  aapt.bzl  acls.bzl  add_constraints.bzl  android_binary.bzl  android_local_test.bzl  android_ndk_repository.bzl  android_neverlink_aspect.bzl  android_platforms_transition.bzl  android_revision.bzl  android_sdk.bzl  android_sdk_repository.bzl  android_sdk_repository.empty.template.bzl  android_sdk_repository.template.bzl  android_sdk_repository_helper.bzl  android_sdk_repository_template.bzl  android_sdk_repository_template.txt  android_split_transition.bzl  android_tools_defaults_jar.bzl  apk_packaging.bzl  attrs.bzl  baseline_profiles.bzl  bundle_keystore_properties.tmpl  bundletool.bzl  busybox.bzl  busybox_compat.bzl  common.bzl  data_binding.bzl  desugar.bzl  dex.bzl  dex_desugar_aspect.bzl  dex_toolchains.bzl  idl.bzl  instrumented_app_info_aspect.bzl  intellij.bzl  java.bzl  migration_tag_DONOTUSE.bzl  min_sdk_version.bzl  native_deps.bzl  native_toolchain_attrs.bzl  (+13 more)
rules/aar_import/: BUILD  attrs.bzl  impl.bzl  rule.bzl
rules/acls/: BUILD  aapt2_feature_flags.bzl  aar_import_deps_checker.bzl  aar_import_explicit_exports_manifest.bzl  aar_import_exports_r_java.bzl  aar_import_package_check.bzl  aar_propagate_resources.bzl  (+84 more)
stardoc/: BUILD  doc_rules.bzl  header_template.vm  table_of_contents_template.vm
(+425 files in other folders)
