module(
    name = "basicapp",
)

bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")

bazel_dep(
    name = "rules_android",
    version = "0.7.1",
)


# Local override to enable this app to be used for rules_android presubmit
# integration testing. If you're basing your app's MODULE file on this
# example, you do *not* need the following override.
local_path_override(
    module_name = "rules_android",
    path = "../../",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

