module(
    name = "basicapp",
)

bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")

bazel_dep(
    name = "rules_android",
    version = "0.7.3",
)


# Local override to enable this app to be used for rules_android presubmit
# integration testing. If you're basing your app's MODULE file on this
# example, you do *not* need the following override.
local_path_override(
    module_name = "rules_android",
    path = "../../",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
android_sdk_repository_extension.configure(api_level = 32)
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

# NOTE: It's not actually necessary to add protobuf as a dep to the example app.
# This is only here to enable setting --@protobuf//bazel/flags:prefer_prebuilt_protoc
# in order to make internal presubmit faster. This quirk is really only relevant
# to protobuf ~33.4 or so, as that flag will become true by default in 34+.
# See https://protobuf.dev/news/2026-01-16/
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
