module(name = "basic-example")

bazel_dep(name = "rules_java", version = "6.4.0")
bazel_dep(name = "rules_android", version = "1")
local_path_override(
    module_name = "rules_android",
    path = "../../",
)

android_sdk_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_extension")
use_repo(android_sdk_extension, "androidsdk")

register_toolchains("@androidsdk//:all")
