module(
    name = "databinding",
)

bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.6")

bazel_dep(
    name = "rules_android",
    version = "0.6.3",
)

local_path_override(
    module_name = "rules_android",
    path = "../../",
)

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")


maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "androidx.annotation:annotation-jvm:1.9.1",
        "androidx.databinding:databinding-adapters:8.7.0",
        "androidx.databinding:databinding-runtime:8.7.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
        "https://repo.gradle.org/gradle/libs-releases",
    ],
    # To generate, run:
    # REPIN=1 bazelisk run --enable_bzlmod @maven//:pin
    # lock_file = "//:maven_install.json",
    use_starlark_android_rules = True,
)
use_repo(
    maven,
    "maven",
)
